<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="photo_progress_loaded">Photo Progress Loaded</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Serach</string>
    <string name="reload">Reload</string>
    <string name="start_polling">Start Polling</string>
    <string name="stop_polling">Stop Polling</string>
    <string name="new_picture_arriving">New Picture</string>
    <string name="new_picture_title">New Picture!!</string>
    <string name="new_picture_content">Create new picture</string>
    <string name="manual_check">Manual Check</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_by_url">Open By Url</string>
    <string name="open_with_external_browser">Open with external browser</string>
    <string name="open_in_app_browser">Open in-app browser</string>
    <string name="in_app_browser">In-App Browser</string>
    <string name="photo_setting">Photo Setting</string>

    <string name="use_gps_setting">Use GPS when searching</string>
    <string name="photo_map">Map for Photo</string>
    <string name="open_in_map">Open in Map</string>
    <string name="no_photo_url">No photo Url</string>

</resources>
