<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search"
        android:id="@+id/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/clear_search"
        android:id="@+id/menu_clear_search"
        app:showAsAction="never"/>

    <item
        android:title="@string/reload"
        android:id="@+id/menu_reload"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_toggle_polling"
        android:title="@string/start_polling"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_manual_check"
        android:title="@string/manual_check"
        android:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_setting"
        android:title="@string/photo_setting"
        android:showAsAction="never"/>

</menu>